@@ -12,6 +12,7 @@ namespace TreeEnumeration
 		TREE_SMALL,
 		TREE_FULL_SIZE,
 		TREE_DEAD,
+		TREE_DISAPPEARED,
 		TREE_STATE_TOTAL
 	};
 	typedef enum TREE_GROWTH_RATE
@@ -20,7 +21,8 @@ namespace TreeEnumeration
 		TREE_GROWTH_RATE_SAPLING_TO_BIGGER_SAPPLING = 100,
 		TREE_GROWTH_RATE_BIGGER_SAPPLING_TO_SMALL = 200,
 		TREE_GROWTH_RATE_SMALL_TO_FULL_SIZE = 500,
-		TREE_GROWTH_RATE_FULL_SIZE_TO_DEATH_AVERAGE = 1000
+		TREE_GROWTH_RATE_FULL_SIZE_TO_DEATH_AVERAGE = 1000,
+		TREE_GROWTH_RATE_DEATH_TO_DISAPPEAR = 300
 	};
 	//TREE_STATUS& operator++(TREE_STATUS& t)
 	//{
