@@ -1,0 +1,7 @@
+#pragma once
+#include <stdint.h>
+
+namespace WorldConstant
+{
+	
+};
